--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cookie": "^0.3.1",
     "oauth": "^0.9.15",
+    "twitter": "^1.7.1",
     "uniqid": "^4.1.1",
     "vo": "^4.0.2"
   }
