--- a/serverless.yml
+++ b/serverless.yml
@@ -24,15 +24,15 @@ functions:
   auth:
     handler: handler.auth
     events:
-      - http:
-          path: auth
-          method: get
+      - { http: { path: auth, method: get } }
   callback:
     handler: handler.callback
     events:
-      - http:
-          path: callback
-          method: get
+      - { http: { path: callback, method: get } }
+  me:
+    handler: handler.me
+    events:
+      - { http: { path: me, method: get } }
 
 resources:
   Resources:
