--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "istanbul": "^0.4.5",
     "mocha": "^5.0.0",
     "proxyquire": "^1.8.0",
     "sinon": "^4.3.0"
+  },
+  "scripts": {
+    "coverage": "istanbul cover -x '*.test.js' node_modules/mocha/bin/_mocha '*.test.js' -- -R spec --recursive"
   }
 }
